该版本解决了点名历史不同课程混淆问题，以及删除班级再创建后的历史信息存留问题

--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -47,7 +47,7 @@
             android:id="@+id/btn_import_excel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="从Excel导入" />
+            android:text="Excel导入" />
     </LinearLayout>
 
 
